--- a/todo
+++ b/todo
@@ -1,3 +1,3 @@
 1. stylelint https://stylelint.io/user-guide/get-started
-2. husky & commitlint & comitizen
+2. husky & commitlint
 3. storybook https://turbo.build/repo/docs/guides/tools/storybook
